# wellbeing-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  generate_cartoons.py  main.py  pyproject.toml  render.yaml
journal-app/: index.html  package-lock.json  package.json  vite.config.js
journal-app/public/: journals
journal-app/src/: App.jsx  index.css
journal-app/src/components/: JournalCard.jsx  MarkdownRenderer.jsx  MoodChart.jsx  MoodTimeline.jsx  PageWrapper.jsx  SearchModal.jsx  SharePreview.jsx  Sidebar.jsx  StatCard.jsx
journal-app/src/hooks/: useJournals.js  useSearch.js  useSearchModal.jsx  useStats.js
journal-app/src/lib/: api.js  shareCard.js
journal-app/src/pages/: CalendarPage.jsx  ChatPage.jsx  Dashboard.jsx  EntriesPage.jsx  JournalPage.jsx
journals/: 2026-03-01.md  2026-03-02.md  2026-03-03.md  2026-03-04.md  2026-03-05.md  2026-03-06.md  2026-03-07.md  2026-03-08.md  2026-03-09.md  2026-03-10.md  2026-03-11.md  2026-03-12.md  2026-03-13.md  2026-03-14.md  2026-03-15.md  2026-03-16-2.md  2026-03-16.md  2026-03-17.md  2026-03-18.md  2026-03-19.md  2026-03-20.md  2026-03-21.md  2026-03-22.md  2026-03-23.md  2026-03-24.md  2026-03-25.md  2026-03-26.md  2026-03-27.md  2026-03-28.md  2026-03-29.md  2026-03-30.md  2026-03-31.md  2026-04-01.md  2026-04-02-2.md  2026-04-02.md
obsidian-interview-prep/: Orca Brands - 6 Dimension AI Pitch.md  Orca Brands - Company Research.md
tests/: test_agent.py
wellbeing_agent/: agent.py  api.py  evalset2e5f3c.evalset.json
wellbeing_agent/tools/: image_gen.py  journal_store.py
